[gd_scene load_steps=5 format=3 uid="uid://d0d836sa7el1g"]

[ext_resource type="Script" path="res://ennemi/triple_turret.gd" id="1_w5j4k"]
[ext_resource type="PackedScene" uid="uid://wmwy6vlkp3wa" path="res://ennemi/ennemi_bullet.tscn" id="2_i4i5p"]
[ext_resource type="Texture2D" uid="uid://c3uivh1nudc50" path="res://art/triple_turret_ennemie.png" id="3_8r7ro"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e0443"]
size = Vector2(14, 12)

[node name="TripleTurret" type="CharacterBody2D" groups=["Enemies"]]
scale = Vector2(4, 4)
collision_layer = 2
script = ExtResource("1_w5j4k")
Bullet = ExtResource("2_i4i5p")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_8r7ro")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_e0443")

[node name="FrontCanon" type="Marker2D" parent="."]
position = Vector2(0, 7.75)
rotation = 1.5708

[node name="Timer" type="Timer" parent="."]

[node name="RightCanon" type="Marker2D" parent="."]
position = Vector2(-7.75, 0)
rotation = 3.14159

[node name="LeftCanon" type="Marker2D" parent="."]
position = Vector2(8, 0)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
